# review-memory-agent

./: README.md  azure.yaml
api/: function_app.py  pyproject.toml  requirements.txt
docs/: apply-detailed-design.md  azure-architecture.md  azure-component-decisions.md  azure-development-plan.md  concept.md  implementation-guide.md  infrastructure-implementation-guide.md  memory-detailed-design.md  mvp.md  review-detailed-design.md
infra/: main.bicep  main.json  main.parameters.json
infra/modules/: cosmos.bicep  docintelligence.bicep  foundry.bicep  functions.bicep  keyvault.bicep  monitoring.bicep  openai.bicep  staticwebapp.bicep  storage.bicep
prototype/: app.js  index.html  styles.css
