[project]
name = "review-memory-agent-api"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.21.0",
    "anthropic>=0.40.0",
    "azure-cosmos>=4.9.0",
    "azure-storage-blob>=12.19.0",
    "azure-storage-queue>=12.10.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-identity>=1.17.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
